# url-checker-tools

./: .env.template  .envbuild  .envbuild.template  .envdev.template  .envinit  .envtest.template  .envtestbuild.template  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTORS.md  LICENSE  Makefile  README.md  RELEASE_NOTES.md  SECURITY.md  UPGRADING_NOTES.md  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  run_7zip.sh  run_github.sh  run_sus.sh
contrib/: logo.xcf
contrib/makedeb-a-la-spoti/: LICENSE
contrib/packpy-src/: LICENSE
data/yara/: basic.yar
data/yara/blocking/: block_page_detection.yar
data/yara/downloads/: download_detection.yar  download_headers.yar  redirect_detection.yar  redirect_detection.yar.bak
data/yara/malware/: malware_detection.yar
data/yara/phishing/: phishing_detection.yar  phishing_detection_refined.yar  social_engineering.yar
doc/: asn-risk-assessment.md  doc.md  execution_flow_robot_mode.md  how-to-api-whalebone.md  lookyloo-metadata.md  misp.md  provider_development_guide.md  urlscan-analysis.md  urlscan-openapi.json  virustotal-analysis.md  yara-analysis.md
documentation/: brainstorm.md  doc.md  how-to-api-whalebone.md  metadata-cross-validation.md  misp.md  whois-analysis.md
src/: url_checker_tools.py
src/url_checker_tools/: __init__.py
src/url_checker_tools/analysis/: __init__.py  unified_scorer.py
src/url_checker_tools/config/: display_constants.py  provider_config.py  scoring_config.py
src/url_checker_tools/core/: base_provider.py  exceptions.py  key_manager.py  utils.py
src/url_checker_tools/integrations/: __init__.py  misp_reporter.py
src/url_checker_tools/output/: __init__.py  formatters.py
src/url_checker_tools/providers/: abuseipdb.py  google_sb.py  link_analyzer.py  lookyloo.py  misp.py  urlscan.py  virustotal.py  whalebone.py  whois.py  yara.py
src/url_checker_tools/workflows/: orchestrator.py
src/urlchecker/: __init__.py
src/urlchecker/analysis/: unified_scorer.py
src/urlchecker/config/: __init__.py  display_constants.py  logging_config.py  provider_config.py  providers_enum.py  robot_config.py  scoring_config.py
src/urlchecker/core/: __init__.py  base_provider.py  celery_app.py  http_client.py  key_manager.py  results.py  utils.py
src/urlchecker/integrations/: misp_reporter.py  shodan_enrichment.py
src/urlchecker/output/: formatters.py
src/urlchecker/providers/: __init__.py  abuseipdb.py  google_sb.py  link_analyzer.py  lookyloo.py  misp.py  urlscan.py  virustotal.py  whalebone.py  whois.py  yara.py
src/urlchecker/workflows/: __init__.py  orchestrator.py
tests/: TEST.md  pytest.ini  run_tests.py  test_base_provider_functionality.py  test_cli_functionality.py  test_http_client_functionality.py  test_misp_integration_functionality.py  test_provider_discovery.py  test_realistic_scanning.py  test_results_functionality.py  test_robot_config_functionality.py  test_security_robustness.py  test_workflow_integration.py  wb_test.py
tests/scripts/: TESTING_SCRIPTS.md  run_7zip.sh  run_github.sh  run_miner.sh  run_sus.sh
tests/test_data/: __init__.py  benign.html  local_server.py  malicious.html  malicious_content_generator.py  test_rules.yar
tests/test_helpers/: __init__.py
tools/: keys.py  manage_keys.py
