# https://github.com/pypa/setuptools/blob/main/docs/userguide/quickstart.rst
[project]
name = "url-checker-tools"
version = "0.1.0"
description = "URL Checker Tools is a collection of tools that will be leveraged by the URL Checker Public Service"
authors = [
    {name = "Sam Kafai El-Khorassani", email = "sam.kafai@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "celery[redis]>=5.3.0",
    "keyring>=25.6.0",
    "misp-modules>=3.0.2",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",
    "pylookyloo>=1.31.2",
    "pymisp>=2.5.10",
    "pypandora>=1.9.4",
    "pysafebrowsing>=0.1.4",
    "python-dotenv>=1.1.1",
    "redis>=5.0.0",
    "requests>=2.32.5",
    "vt-py>=0.21.0",
    "whois>=1.20240129.2",
    "yara-x>=1.5.0",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.black]
#basepython = python3.11
#line-length = 79
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | \venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88

[dependency-groups]
dev = [
    "pre-commit>=4.3.0",
    "pytest>=8.4.1",
    "pytest-cov>=7.0.0",
    "pytest-xdist>=3.8.0",
]
# Optional integrations
integrations = [
    "pymisp==2.5.10",
]


[tool.pytest.ini_options]
markers = [
    "unit: unit tests that validate small, isolated functionality",
    "integration: integration tests that exercise multiple components together",
]
